--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@
 
 header {
     background: rgba(255, 144, 14, 0.10);
-    padding: 50px 150px 20px;
+    /* padding: 50px 150px 20px; */
 
 
 }
@@ -35,6 +35,7 @@ header {
     font-weight: 900;
     padding: 10px 20px;
 }
+
 
 nav li {
     display: flex;
